# axios

./: .gitignore  AGENTS.md  Justfile  LICENSE  README.md  ROADMAP.md  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml  model-check.yml
alurl/: Cargo.toml
alurl/src/: lib.rs  parse.rs  tests.rs
atom/: AGENTS.md  Cargo.toml
atom/atom-conformance/: Cargo.toml
atom/atom-conformance/src/: lib.rs
atom/atom-conformance/tests/: battery.rs
atom/atom-conformance/tests/common/: mod.rs
atom/atom-core/: Cargo.toml
atom/atom-git/: Cargo.toml
atom/atom-git/src/: charter_store.rs  error.rs  gix_util.rs  lib.rs  registry.rs  source.rs  store.rs
atom/atom-git/tests/: hash_rehash.rs  integration.rs  store_keying.rs  tag_chain.rs
atom/atom-id/: Cargo.toml
atom/atom-id/corpus/charter/: bootstrap_seizure.json  claim_replacement.json  divergent_succession.json  prefix_rollback.json
atom/atom-id/corpus/vectors/: ed25519.json  es256.json  es384.json
atom/atom-id/fuzz/corpus/test_verify_robustness_bolero/: dummy_seed
atom/atom-id/src/: charter.rs  digest.rs  lib.rs  name.rs  serde_alg.rs  serde_b64.rs  tests.rs
atom/atom-id/tests/: golden_vectors.rs  pipeline.rs  properties.rs
atom/atom-id/tests/charter/: bootstrap_gate.rs  chain_monotonicity.rs  construction.rs  fixtures.rs  main.rs
atom/atom-uri/: Cargo.toml
atom/atom-uri/fuzz/corpus/test_raw_atom_uri_roundtrip_bolero/: valid_uri
atom/atom-uri/src/: lib.rs
atom/fuzz/: Cargo.toml
atom/fuzz/fuzz_targets/: coz_verification.rs  uri_parser.rs
docs/: check_constraint_coverage.py  compliance_tracker.py  glossary.md  on_path_constraints.json  spec-audit.md  test_check_constraint_coverage.py  test_compliance_tracker.py
docs/adr/: 0001-monorepo-workspace-architecture.md  0002-decoupling-snix-backend.md  0003-composable-deployment-modes.md  0004-learning-augmented-scheduling.md  0005-hermetic-transactional-composition.md  0006-execution-as-the-primitive.md  0007-atom-version-integrity-system.md  0008-surety-of-source.md
docs/architecture/: atom-sad.md  eos-sad.md  htc-sad.md  ion-sad.md
docs/charters/: decentralized-publishing-stack.md
docs/models/: atom-model.md  composition-model.md  eos-scheduling.md  execution-model.md  publishing-stack-layers.md  storage-model.md  surety-of-source.md
docs/plans/: atom-protocol-library.md  ion-atom-restructuring.md  tla-specification-plan.md
docs/specs/: aliased-url-resolution.md  atom-backend-contract.md  atom-sourcing.md  atom-transactions.md  eos-build-engine.md  eos-network-protocol.md  eos-sandboxing.md  eos-scheduler.md  eos-snix-backend.md  git-storage-format.md  ion-eos-contract.md  ion-manifest.md  ion-resolution.md  layer-boundaries.md  lock-file-schema.md  run_model_check.sh  shell.nix  trust-model.md
eos/: AGENTS.md  Cargo.toml  README.md
eos/eos/: Cargo.toml
eos/eos-core/: Cargo.toml
eos/eos-core/src/: bridge.rs  digest.rs  engine.rs  error.rs  eval.rs  executor.rs  index.rs  ingest.rs  job.rs  lib.rs  request.rs  store.rs
eos/eos-core/tests/: traits.rs
eos/eos-daemon/: Cargo.toml
eos/eos-daemon/src/: config.rs  main.rs  scheduler.rs  server.rs  services.rs
eos/eos-proto/: Cargo.toml  build.rs
eos/eos-snix/: Cargo.toml
eos/eos-snix/src/: build.rs  convert.rs  error.rs  eval.rs  ingest.rs  lib.rs  sandbox.rs  store.rs
eos/eos-snix/tests/: eval_tests.rs
eos/eos-store/: Cargo.toml
eos/eos/src/: bridge.rs  execution.rs  fetch.rs  index.rs  lib.rs  lock.rs  orchestrator.rs
eos/eos/tests/: tracer.rs
eos/fuzz/: Cargo.toml
eos/fuzz/fuzz_targets/: lock_parser_raw.rs  lock_parser_structured.rs
htc/: Cargo.toml  README.md
htc/htc-comp/: Cargo.toml
htc/htc-comp/src/: lib.rs
htc/htc-exec/: Cargo.toml
htc/htc-exec/src/: facts.rs  lib.rs
ion/: AGENTS.md  Cargo.toml
ion/fuzz/: Cargo.toml
ion/fuzz/corpus/manifest_parser/: seed.toml
ion/fuzz/fuzz_targets/: manifest_parser.rs
ion/ion-cli/: Cargo.toml
ion/ion-cli/src/: main.rs
ion/ion-eos/: Cargo.toml
ion/ion-eos/src/: discovery.rs  error.rs  lib.rs
ion/ion-lock/: Cargo.toml
ion/ion-lock/corpus/v2/golden/: full.toml  minimal.toml
ion/ion-lock/corpus/v2/violations/: cyclic-requires.toml  dangling-requires.toml  lock-no-compose.toml  lock-no-foreign-metadata.toml  lock-no-interfaces.toml  lock-no-override-state.toml  lock-no-params.toml  lock-no-plan-digest.toml  lock-no-toolchain-section.toml  undeclared-set.toml  unreferenced-set.toml
ion/ion-lock/fuzz/corpus/test_lock_file_parse_raw_no_panic/: valid_lock
ion/ion-lock/fuzz/corpus/test_lock_file_roundtrip/: dummy_seed
ion/ion-lock/src/: lib.rs  v2.rs
ion/ion-lock/tests/: v2_corpus.rs
ion/ion-lock/tests/support/: mod.rs
ion/ion-manifest/: Cargo.toml
ion/ion-manifest/fuzz/corpus/ion_manifest_parse_no_panic/: valid_manifest
ion/ion-manifest/src/: lib.rs
ion/ion-resolve/: Cargo.toml
tools/eos-corpus/: pyproject.toml  shell.nix
tools/eos-corpus/eos_corpus/: __init__.py  cli.py  fallback.py  graph.py  hydra.py  merge.py  nix.py  trace.py
tools/eos-corpus/scripts/: apply_heft.py
tools/eos-corpus/tests/: test_cli.py  test_fallback.py  test_graph.py  test_hydra.py  test_trace.py
tools/eos-sim/: Cargo.toml  README.md
tools/eos-sim-traces/: PROVENANCE.md  bat.cold.json  bat.json  bat.partial.json  bat.warm.json  curl.cold.json  curl.partial.json  curl.warm.json  fd.cold.json  fd.json  fd.partial.json  fd.warm.json  ffmpeg.cold.json  ffmpeg.json  ffmpeg.partial.json  ffmpeg.warm.json  git.cold.json  git.json  git.partial.json  git.warm.json  jq.cold.json  jq.json  jq.partial.json  jq.warm.json  linux.json  linux.partial.json  linux.warm.json  openssh.json  (+15 more)
tools/eos-sim/fixtures/: diamond.json  divergence.json
tools/eos-sim/src/: coarsen.rs  config.rs  engine.rs  graph.rs  lib.rs  main.rs  metrics.rs  peft.rs  rng.rs  trace.rs
tools/eos-sim/tests/: coarsening_divergence.rs  determinism.rs  starvation.rs
tools/eos-sweep/: pyproject.toml  shell.nix
tools/eos-sweep/eos_sweep/: analyze.py  sweep.py
tools/eos-sweep/tests/: test_sweep.py
www/: .gitignore  process_docs.py  site.toml
(+120 files in other folders)
