[package]
description = "Git backend for the Atom protocol"
edition     = "2024"
name        = "atom-git"
version     = "0.1.0"

[dependencies]
atom-core = { path = "../atom-core" }
atom-id = { path = "../atom-id" }
coz-rs = { version = "0.4" }
gix = { version = "^0.83", default-features = false, features = [
  "blocking-http-transport-reqwest-rust-tls",
  "max-performance-safe",
  "blob-diff",
  "revision",
  "sha1",
  "sha256",
] }
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
proptest = "1.5"
tempfile = "3"
