[package]
edition = "2024"
name    = "atom-id"
version = "0.1.0"

[features]
default = ["serde"]
serde   = ["dep:serde", "dep:serde_json"]

[dependencies]
coz-rs = { version = "0.4" }

serde                 = { version = "1", features = ["derive"], optional = true }
serde_json            = { version = "1", optional = true }
thiserror             = "1"
unicode-ident         = "1"
unicode-normalization = "0.1"
