[package]
description = "Atom URI parsing and alias-aware resolution"
edition     = "2024"
license     = "MPL-2.0"
name        = "atom-uri"
version     = "0.1.0"

[dependencies]
alurl   = { path = "../../alurl" }
atom-id = { path = "../atom-id" }

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bolero    = "0.11"
proptest  = "1.5"
