[package]
edition = "2024"
name    = "atom-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json    = "1"

atom-id  = { path = "../atom-id" }
atom-uri = { path = "../atom-uri" }

[[bin]]
bench = false
doc   = false
name  = "uri_parser"
path  = "fuzz_targets/uri_parser.rs"
test  = false

[[bin]]
bench = false
doc   = false
name  = "coz_verification"
path  = "fuzz_targets/coz_verification.rs"
test  = false
