[package]
edition = "2024"
name    = "eos-core"
version = "0.1.0"

[dependencies]
atom-core     = { path = "../../atom/atom-core" }
atom-id       = { path = "../../atom/atom-id" }
bytes         = "1"
futures-core  = "0.3"
thiserror     = "2"
trait-variant = "0.1"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bolero    = "0.11"
