[package]
edition = "2024"
name    = "eos-daemon"
version = "0.1.0"

[[bin]]
name = "eosd"
path = "src/main.rs"

[dependencies]
capnp = "0.20"
capnp-rpc = "0.20"
clap = { version = "4", features = ["derive"] }
eos = { path = "../eos" }
eos-core = { path = "../eos-core" }
eos-proto = { path = "../eos-proto" }
eos-snix = { path = "../eos-snix" }
eos-store = { path = "../eos-store" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "signal",
  "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
