[package]
edition = "2024"
name    = "eos-daemon"
version = "0.1.0"

[[bin]]
name = "eosd"
path = "src/main.rs"

[dependencies]
atom-git = { path = "../../atom/atom-git" }
atom-id = { path = "../../atom/atom-id" }
capnp = "0.20"
capnp-rpc = "0.20"
clap = { version = "4", features = ["derive"] }
eos = { path = "../eos" }
eos-core = { path = "../eos-core" }
eos-proto = { path = "../eos-proto" }
eos-snix = { path = "../eos-snix" }
gix = { version = "^0.83", default-features = false }
serde_json = "1"
snix-build = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-castore = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-store = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "net",
  "signal",
  "macros",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
