[package]
edition = "2024"
name    = "eos-snix"
version = "0.1.0"

[dependencies]
eos-core  = { path = "../eos-core" }
eos-store = { path = "../eos-store" }
atom-id   = { path = "../../atom/atom-id" }
# Snix crates — path deps to local checkout
blake3       = "1"
bstr         = "1"
bytes        = "1"
clap         = { version = "4", features = ["derive"] }
futures      = "0.3"
nix-compat   = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/nix-compat" }
rustc-hash   = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
smol_str     = "0.2"
snix-build   = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/build" }
snix-castore = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/castore" }
snix-eval    = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/eval" }
snix-glue    = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/glue" }
snix-store   = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/store" }
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util   = { version = "0.7", features = ["io"] }
tracing      = "0.1"
url          = "2"


[target.'cfg(target_os = "macos")'.dependencies]
birdcage = "0.8"
