[package]
edition = "2024"
name    = "eos-snix"
version = "0.1.0"

[dependencies]
atom-id  = { path = "../../atom/atom-id" }
eos-core = { path = "../eos-core" }
# Snix crates — path deps to local checkout
blake3       = "1"
bstr         = "1"
bytes        = "1"
clap         = { version = "4", features = ["derive"] }
futures      = "0.3"
nix-compat   = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
redb         = "4.1.0"
rustc-hash   = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
smol_str     = "0.2"
snix-build   = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-castore = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-eval    = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-glue    = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-store   = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util   = { version = "0.7", features = ["io"] }
tracing      = "0.1"
url          = "2"


[target.'cfg(target_os = "macos")'.dependencies]
birdcage = "0.8"
