[package]
edition = "2024"
name    = "eos-snix"
version = "0.1.0"

[dependencies]
atom-id  = { path = "../../atom/atom-id" }
eos-core = { path = "../eos-core" }
# Snix crates — path deps to local checkout
# Pinned: snix-castore requires blake3's "traits-preview" digest::Digest impl,
# whose trait-bound shape is incompatible with blake3 >=1.8 (digest crate
# version drift upstream). Unpin only after snix-castore's own blake3
# constraint moves — this crate is slated for deletion anyway (ADR-0006 §3,
# eos-snix Phase-4 removal), so this pin is not expected to need revisiting
# before then.
blake3       = "=1.5.5"
bstr         = "1"
bytes        = "1"
clap         = { version = "4", features = ["derive"] }
futures      = "0.3"
nix-compat   = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
redb         = "4.1.0"
rustc-hash   = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
smol_str     = "0.2"
snix-build   = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-castore = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-eval    = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-glue    = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-store   = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tokio-util   = { version = "0.7", features = ["io"] }
tracing      = "0.1"
url          = "2"


[target.'cfg(target_os = "macos")'.dependencies]
birdcage = "0.8"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bolero    = "0.11"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
