[package]
edition = "2024"
name    = "eos"
version = "0.1.0"

[dependencies]
atom-core    = { path = "../../atom/atom-core" }
atom-id      = { path = "../../atom/atom-id" }
base64       = "0.22"
blake3       = "1"
eos-core     = { path = "../eos-core" }
eos-snix     = { path = "../eos-snix" }
futures      = "0.3"
hex          = "0.4"
nix-compat   = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/nix-compat" }
serde        = { version = "1", features = ["derive"] }
sha2         = "0.10"
snix-castore = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/castore" }
snix-store   = { path = "/var/home/nrd/git/git.snix.dev/snix/snix/snix/store" }
thiserror    = "2"
tokio        = { version = "1", features = ["sync", "rt", "macros", "process"] }
toml         = "0.8"
tracing      = "0.1"
