[package]
edition = "2024"
name    = "eos"
version = "0.1.0"

[dependencies]
atom-core = { path = "../../atom/atom-core" }
atom-git = { path = "../../atom/atom-git" }
atom-id = { path = "../../atom/atom-id" }
base64 = "0.22"
blake3 = "1"
eos-core = { path = "../eos-core" }
eos-snix = { path = "../eos-snix" }
futures = "0.3"
gix = { version = "^0.83", default-features = false, features = [
  "max-performance-safe",
  "sha1",
] }
hex = "0.4"
nix-compat = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
snix-castore = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-store = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
thiserror = "2"
tokio = { version = "1", features = [
  "sync",
  "rt",
  "macros",
  "process",
  "io-util",
] }
tracing = "0.1"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bolero    = "0.11"
