[package]
edition = "2024"
name    = "eos"
version = "0.1.0"

[dependencies]
atom-core = { path = "../../atom/atom-core" }
atom-git  = { path = "../../atom/atom-git" }
atom-id   = { path = "../../atom/atom-id" }
base64    = "0.22"
# Pinned: snix-castore requires blake3's "traits-preview" digest::Digest impl,
# whose trait-bound shape is incompatible with blake3 >=1.8 (digest crate
# version drift upstream). Same rationale as eos-snix's pin; unpin only after
# snix-castore's own blake3 constraint moves.
blake3 = "=1.5.5"
eos-core = { path = "../eos-core" }
futures = "0.3"
hex = "0.4"
htc-exec = { path = "../../htc/htc-exec" }
nix-compat = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
snix-castore = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
snix-store = { git = "https://github.com/nrdxp/snix.git", branch = "eos-patches" }
thiserror = "2"
tokio = { version = "1", features = [
  "sync",
  "rt",
  "macros",
  "process",
  "io-util",
] }
tracing = "0.1"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bolero    = "0.11"
