[package]
edition = "2024"
name    = "eos-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary     = { version = "1", features = ["derive"] }
atom-id       = { path = "../../atom/atom-id" }
blake3        = "=1.5.4"
eos           = { path = "../eos" }
hex           = "0.4"
libfuzzer-sys = "0.4"
semver        = "1"
serde_json    = "1"
toml          = "0.8"

[[bin]]
bench = false
doc   = false
name  = "lock_parser_raw"
path  = "fuzz_targets/lock_parser_raw.rs"
test  = false

[[bin]]
bench = false
doc   = false
name  = "lock_parser_structured"
path  = "fuzz_targets/lock_parser_structured.rs"
test  = false
