[package]
edition = "2024"
name    = "ion-cli"
version = "0.1.0"

[dependencies]
atom-core    = { path = "../../atom/atom-core" }
clap         = { version = "4", features = ["derive"] }
eos-core     = { path = "../../eos/eos-core" }
ion-eos      = { path = "../ion-eos" }
ion-lock     = { path = "../ion-lock" }
ion-manifest = { path = "../ion-manifest" }
ion-resolve  = { path = "../ion-resolve" }
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

[features]
default         = ["embedded-engine"]
embedded-engine = []
