[package]
edition = "2024"
name    = "ion-eos"
version = "0.1.0"

[dependencies]
atom-id    = { path = "../../atom/atom-id" }
blake3     = "1"
capnp      = "0.20"
capnp-rpc  = "0.20"
eos-core   = { path = "../../eos/eos-core" }
eos-proto  = { path = "../../eos/eos-proto" }
ion-lock   = { path = "../ion-lock" }
thiserror  = "2"
tokio      = { version = "1", features = ["net", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing    = "0.1"
