[package]
edition = "2024"
name    = "ion-lock"
version = "0.1.0"

[dependencies]
atom-id = { path = "../../atom/atom-id" }
semver  = "1"
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
bolero    = "0.11"
hex       = "0.4"
