[build-system]
build-backend = "setuptools.backends.legacy:build"
requires      = ["setuptools>=68"]

[project]
dependencies    = ["click>=8.0", "requests>=2.31"]
description     = "nixpkgs trace corpus extraction toolkit for eos-scheduler-validation"
name            = "eos-corpus"
requires-python = ">=3.11"
version         = "0.1.0"

[project.scripts]
eos-corpus = "eos_corpus.cli:main"

[tool.setuptools.packages.find]
include = ["eos_corpus*"]
where   = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
