[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eos-sweep"
version = "0.1.0"
description = "P10 sweep harness and analysis for eos-scheduler-validation"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["eos_sweep*"]
