[build-system]
build-backend = "setuptools.backends.legacy:build"
requires      = ["setuptools>=68"]

[project]
dependencies    = []
description     = "P10 sweep harness and analysis for eos-scheduler-validation"
name            = "eos-sweep"
requires-python = ">=3.11"
version         = "0.1.0"

[tool.setuptools.packages.find]
include = ["eos_sweep*"]
where   = ["."]
